--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,9 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  /* background: #012622; */
-  color-scheme: light dark;
+  background: #252525;
+  /* color-scheme: light dark; */
+  color: white;
 }
 
 :root {
