--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,8 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  background: #252525;
-  /* color-scheme: light dark; */
+  /* background: #252525; */
+  color-scheme: light dark;
   color: white;
 }
 
@@ -15,7 +15,7 @@
   --helper-color: #99b9ff;
 }
 
-body{
+body {
   overflow-x: hidden;
 }
 
@@ -28,9 +28,17 @@ a {
   color: var(--btn-color);
   font-weight: 500;
   font-size: 1.1rem;
+  transition: all .3s ease-in-out;
+  border: 2px solid transparent;
 }
 
-.btn1{
+a:hover,
+a.active {
+  color: white;
+  border-bottom: 2px solid var(--btn-color);
+}
+
+.btn1 {
   background: var(--btn-color);
   border-radius: .5rem;
   padding: .4rem 0;
@@ -41,7 +49,7 @@ a {
   color: white;
 }
 
-.btn2{
+.btn2 {
   border-radius: .5rem;
   padding: .4rem 0;
   width: 10rem;
@@ -52,7 +60,7 @@ a {
 }
 
 .btn1:hover,
-.btn2:hover{
+.btn2:hover {
   cursor: pointer;
   box-shadow: 0 0 2rem var(--btn-color);
   border: 2px solid white;
