--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
   font-family: "Poppins", sans-serif;
   /* background: #252525; */
   color-scheme: light dark;
-  color: white;
+  /* color: white; */
 }
 
 :root {
