--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -1,13 +1,16 @@
-.adminNav{
+.adminNav {
     width: 20vw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
     padding-top: 5rem;
+    border-right: 2px solid var(--btn-color);
+    box-shadow: 0 0 2rem var(--btn-color);
 }
 
-.adminNav .btn1{
+.adminNav .btn1 {
     border-radius: 2rem;
     display: flex;
     align-items: center;
@@ -15,7 +18,134 @@
     gap: .5rem;
 }
 
-.users{
-    height: 85vh;
+.adminPage {
+    min-height: 100vh;
+    width: 100vw;
     display: flex;
+}
+
+.adminPage h1 {
+    width: fit-content;
+}
+
+.users,
+.messages,
+.services {
+    width: 80vw;
+    padding: 2rem 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+
+
+
+/* Tablee */
+
+
+.container {
+    max-width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.table {
+    width: 100%;
+    border: 1px solid #EEEEEE;
+}
+
+.table-header {
+    display: flex;
+    width: 100%;
+    background: #000;
+    padding: 1rem 0;
+}
+
+.table-row {
+    display: flex;
+    width: 100%;
+    padding: 1rem 0;
+    color: #000;
+}
+
+.table-row:nth-of-type(odd) {
+    background: #EEEEEE;
+}
+
+.table-data,
+.header__item {
+    text-align: center;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 25%;
+}
+
+.table-data h3 {
+    font-weight: 400;
+}
+
+.header__item {
+    text-transform: uppercase;
+}
+
+.filter__link {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    display: inline-block;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.filter__link::after {
+    content: '';
+    position: absolute;
+    right: -1rem;
+    color: white;
+    font-size: .75rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.filter__link.desc::after {
+    content: '(desc)';
+}
+
+.filter__link.asc::after {
+    content: '(asc)';
+}
+
+.table-row,
+.table-header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.table-row .btn1 {
+    width: 5rem;
+}
+
+.btn3 {
+    width: 5rem;
+    padding: 0.4rem 0;
+    text-align: center;
+    border-radius: 2rem;
+    background: #a3ffc6;
+    color: black;
+    transition: all .3s ease-in-out;
+}
+
+.btn3:hover {
+    cursor: pointer;
+    background: #1FA851;
+    color: white;
 }
