add admin pages data fetch

--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -77,6 +77,10 @@
     background: #EEEEEE;
 }
 
+.table-row:nth-of-type(even) {
+    background: #e1e1e1;
+}
+
 .table-data,
 .header__item {
     text-align: center;
@@ -89,6 +93,10 @@
 
 .table-data h3 {
     font-weight: 400;
+    overflow-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: wrap;
 }
 
 .header__item {
