--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -1,13 +1,12 @@
 .adminNav {
-    width: 20vw;
-    min-height: 100vh;
+    width: 100vw;
+    height: 15vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 2rem;
-    padding-top: 5rem;
-    border-right: 2px solid var(--btn-color);
-    box-shadow: 0 0 2rem var(--btn-color);
+    border-bottom: 2px solid var(--btn-color);
+    box-shadow: 0 0 1.5rem var(--btn-color);
 }
 
 .adminNav .btn1 {
@@ -22,6 +21,7 @@
     min-height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
 }
 
 .adminPage h1 {
@@ -30,9 +30,10 @@
 
 .users,
 .messages,
-.services {
-    width: 80vw;
-    padding: 2rem 3rem;
+.adminServices {
+    width: 100vw;
+    min-height: 85vh;
+    padding: 2rem 4rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
