--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,3 +66,27 @@ a.active {
   border: 2px solid white;
   scale: 1.01;
 }
+
+@media screen and (min-width:1440px) {
+  html {
+    font-size: 125%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  html{
+    font-size: 85%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  html{
+      font-size: 70%;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  html{
+      font-size: 55%;
+  }
+}
