--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -11,3 +11,34 @@
 .left {
     gap: 1.8rem;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .about{
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about{
+        flex-direction: column-reverse;
+        justify-content: center;
+        padding: 0 4rem 5rem 4rem;
+        gap: 0rem;
+    }
+
+    .left{
+        align-items: center;
+        text-align: center;
+    }
+
+    .right img{
+        width: 22rem;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .right img{
+        width: 16rem;
+    }
+}
