--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -12,6 +12,60 @@
     gap: 2rem;
 }
 
-.hidden{
+.hidden,
+.icon{
     display: none;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.logo img{
+    width: 2rem;
+    height: 2rem;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    
+}
+
+@media screen and (max-width: 768px) {
+    .pages{
+        position: fixed;
+        top: 10vh;
+        right: -330px;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 3rem 0 0 2rem;
+        background: rgba(0, 0, 0, 0.95);
+        box-shadow: 0rem 0rem 3rem var(--btn-color);
+        border: 1px solid white;
+        border-radius: 2rem;
+        width: 300px;
+        height: fit-content;
+        padding-bottom: 3rem;
+        transition: all .3s ease-in-out;
+    }
+
+    .pagesActive{
+        right: 1rem;
+    }
+
+    .pages a{
+        width: fit-content;
+    }
+
+    .icon{
+        display: block;
+        font-size: 2.2rem;
+        color: var(--btn-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
