--- a/client/src/components/Register/Form.css
+++ b/client/src/components/Register/Form.css
@@ -39,3 +39,49 @@ form div{
     flex-direction: column;
     gap: .1rem;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .formContainer{
+        flex-direction: column;
+        justify-content: center;
+    }
+    input{
+        width: 25rem;
+    }
+    
+    textarea{
+        width: 25rem;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .formContainer{
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 4rem 5rem 4rem;
+        gap: 2rem;
+    }
+
+    .left{
+        align-items: center;
+        text-align: center;
+    }
+
+    .image img{
+        width: 22rem;
+    }
+
+    input{
+        width: 25rem;
+    }
+
+    textarea{
+        width: 25rem;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .image img{
+        width: 16rem;
+    }
+}
