--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -112,6 +112,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: wrap;
+    background: transparent;
+    color: black;
 }
 
 .header__item {
